# aideal-cps-data-lab

./: .gitignore  README.md  pyproject.toml  requirements-browser.txt
config/: aideal-hz23-observer.service.template  ci-bridge.env  collector.example.yaml  engineering-active-scope.toml  engineering-audit-v2.toml  engineering-audit.toml  hz11_high_commission.env  hz11_product_all.env  hz12_product_all_full.env  hz23-last-known-good.toml  hz23-service.env  hz23_risk_policy.json  hz24-audit.toml  hz24-browser.toml  hz24-collection.toml  hz24-contracts.toml  hz24-domain.toml  hz24-loop.toml  hz24-repair.toml  hz24-resume-gate.toml  hz24-validation.toml  hz24-values.toml  jingfen.toml  mysql-commercial.toml  offline-quality.toml  sample-export.toml  test-fixtures.toml
docs/: ARCHITECTURE.md  COMMERCIALIZATION_HANDOFF_20260619.md  CONVERSATION_ARCHIVE_2026-06-19.md  CURRENT_PROGRESS.md  CURRENT_PROGRESS_20260619_FINAL.md  CURRENT_PROGRESS_V2.md  DL2_COMMERCIAL_ARCHITECTURE.md  DL2_DATA_COLLECTION_HANDOFF_PROMPT.md  DL2_JD_UNION_COLLECTION_DESIGN.md  DOCUMENT_AUTHORITY.md  DOCUMENT_AUTHORITY_20260619.md  DOCUMENT_AUTHORITY_FINAL_20260620.md  ENGINEERING_COMMERCIAL_RULES_20260619.md  ENGINEERING_STANDARDS.md  ENVIRONMENT_AND_OPERATIONS.md  ENVIRONMENT_OPERATIONS_20260619.md  NEXT_DIALOG_HANDOFF.md  NEXT_DIALOG_HANDOFF_V2.md  NEXT_DIALOG_PROMPT_20260619.md  PROJECT_MEMORY.md  SESSION_ARCHIVE_2026-06-19.md
memory/: DL2_DATA_COLLECTION_MEMORY.md
reports/: audit_blocker_evidence_latest.json  ci_bridge_evidence_latest.json  commercial_candidate_validation_latest.json  (+381 more)
(+502 files in other folders)
