[project]
name = "aideal-cps-data-lab"
version = "0.1.0"
description = "Authorized JD/Jingfen portal data collection and normalization lab for AIdeal CPS."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
browser = [
  "playwright>=1.45.0"
]

[tool.ruff]
line-length = 100
target-version = "py310"
