[project]
name = "aideal-cps-data-lab"
version = "0.1.0"
description = "Authorized JD/Jingfen portal data collection and normalization lab for AIdeal CPS."
requires-python = ">=3.10"
dependencies = [
  "tomli>=2.0.1,<3"
]

[project.optional-dependencies]
browser = [
  "playwright>=1.45.0"
]
mysql = [
  "PyMySQL>=1.1.0,<2"
]

[tool.ruff]
line-length = 100
target-version = "py310"
